--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/sv_SV/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/sv_SV/openmediavault-usbbackup.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 15:03+0000\n"
+"POT-Creation-Date: 2017-11-18 11:05+0100\n"
+"PO-Revision-Date: 2017-11-19 17:30+0000\n"
 "Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -49,6 +49,9 @@ msgstr "Ta bort filer på mottagningssidan som inte finns hos avsändaren."
 
 msgid "Device"
 msgstr "Enhet"
+
+msgid "Done ..."
+msgstr "Klar ..."
 
 msgid "Edit backup job"
 msgstr "Redigera säkerhetskopieringsjobb"
