--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/el_GR/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/el_GR/openmediavault-usbbackup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-usbbackup package.
 # 
 # Translators:
-# Kostas Moho <kgounaris@hotmail.com>, 2013-2014
+# Kostas Moho <kgounaris@hotmail.com>, 2013-2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 15:03+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"POT-Creation-Date: 2017-11-18 11:05+0100\n"
+"PO-Revision-Date: 2017-11-20 07:21+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,6 +49,9 @@ msgstr "Διαγραφή αρχείων του παραλήπτη που δεν 
 
 msgid "Device"
 msgstr "Συσκευή"
+
+msgid "Done ..."
+msgstr "Ολοκλήρωση ..."
 
 msgid "Edit backup job"
 msgstr "Επεξεργασία εργασίας αντιγράφων ασφαλείας"
