--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/tr_TR/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/tr_TR/openmediavault-usbbackup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the openmediavault-usbbackup package.
 # 
 # Translators:
-# Serhat SUT <serhat.sut@gmail.com>, 2013-2014
+# Serhat SUT <serhat.sut@gmail.com>, 2013-2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-09-19 15:03+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"POT-Creation-Date: 2017-11-18 11:05+0100\n"
+"PO-Revision-Date: 2017-11-18 22:07+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/votdev/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,6 +49,9 @@ msgstr "Göndericide bulunmayan dosyaları kaydedilen taraftan sil"
 
 msgid "Device"
 msgstr "Aygıt"
+
+msgid "Done ..."
+msgstr "Tamamlandı ..."
 
 msgid "Edit backup job"
 msgstr "Yedekleme görevini düzenle"
