--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-24 21:10+0200\n"
-"PO-Revision-Date: 2017-09-24 19:10+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"POT-Creation-Date: 2017-11-18 11:05+0100\n"
+"PO-Revision-Date: 2017-11-18 12:44+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -879,6 +879,9 @@ msgstr "不允許用戶修改自己的帳戶。"
 
 msgid "Disk usage"
 msgstr "磁碟使用量"
+
+msgid "Disks"
+msgstr "磁碟"
 
 msgid "Displaying items {0} - {1} of {2}"
 msgstr "顯示項目 {0} - {1} 總共 {2}"
@@ -2352,9 +2355,6 @@ msgstr "秘魯"
 
 msgid "Philippines"
 msgstr "菲律賓"
-
-msgid "Physical Disks"
-msgstr "實體磁碟"
 
 msgid "Physical disk properties"
 msgstr "實體磁碟屬性"
