Remove the configuration data. Sadly we can not use 'omv-confdbadm' here because the database model has been removed already in a previous stage, see https://wiki.debian.org/MaintainerScripts. Because of that we need to use the helper tools to remove the configuration.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (4.0.4-1) stable; urgency=low
+
+  * Remove configuration in database when package is purged.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Nov 2017 19:04:45 +0100
+
 openmediavault-netatalk (4.0.3-1) stable; urgency=low
 
   * Update locales.
