--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (4.0.3-1) stable; urgency=low
+
+  * Remove configuration in database when package is purged.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Nov 2017 18:43:03 +0100
+
 openmediavault-forkeddaapd (4.0.2-1) stable; urgency=low
 
   * Update locales.
