--- a/deb/openmediavault-snmp/debian/changelog
+++ b/deb/openmediavault-snmp/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-snmp (4.0.3-1) stable; urgency=low
+
+  * Remove configuration in database when package is purged.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Nov 2017 19:28:34 +0100
+
 openmediavault-snmp (4.0.2-1) stable; urgency=low
 
   * Update locales.
