--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
+"PO-Revision-Date: 2017-11-20 18:58+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -889,7 +889,7 @@ msgid "Disk usage"
 msgstr "Plattenbelegung"
 
 msgid "Disks"
-msgstr ""
+msgstr "Laufwerke"
 
 msgid "Displaying items {0} - {1} of {2}"
 msgstr "{0} - {1} von {2} angezeigt"
