--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/hu_HU/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/hu_HU/openmediavault-usbbackup.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 # Gábor Sári <sari.gabor@gmail.com>, 2017
+# Gyuris Gellért <gellert.gyuris@protonmail.com>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-11-20 17:56+0000\n"
+"Last-Translator: Gyuris Gellért <gellert.gyuris@protonmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +53,7 @@ msgid "Device"
 msgstr "Meghajtó"
 
 msgid "Done ..."
-msgstr ""
+msgstr "Kész..."
 
 msgid "Edit backup job"
 msgstr "Mentési feladat módosítása"
