--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -5,14 +5,15 @@
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # Gábor Sári <sari.gabor@gmail.com>, 2017
+# Gyuris Gellért <gellert.gyuris@protonmail.com>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-11-20 17:49+0000\n"
+"Last-Translator: Gyuris Gellért <gellert.gyuris@protonmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -882,7 +883,7 @@ msgid "Disk usage"
 msgstr "Lemez használat"
 
 msgid "Disks"
-msgstr ""
+msgstr "Lemezek"
 
 msgid "Displaying items {0} - {1} of {2}"
 msgstr "Tételek megjelenítése {0} - {1} közül {2}"
