Generate the prelogin message via systemd unit at system boot.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,7 @@ openmediavault (4.0.12-1) stable; urgency=low
     can not be stopped.
   * Make sure NFS shares 'Extra options' are valid.
   * Improve UI usablility on mobile and touch devices.
+  * Generate the prelogin message via systemd unit at system boot.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 18 Nov 2017 11:14:37 +0100
 
