--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-20 18:58+0000\n"
+"PO-Revision-Date: 2017-11-25 00:59+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/votdev/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2860,7 +2860,7 @@ msgid "Select a country ..."
 msgstr "Wähle ein Land ..."
 
 msgid "Select a device ..."
-msgstr "Wählen Sie ein Laufwerk aus ..."
+msgstr "Wähle ein Gerät ..."
 
 msgid "Select a directory"
 msgstr "Wählen Sie ein Verzeichnis"
