--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-clamav (4.1.3-1) stable; urgency=low
 
+  * Update locales.
   * Remove configuration in database when package is purged.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Nov 2017 18:35:52 +0100
