--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/it_IT/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/it_IT/openmediavault-clamav.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-11-20 22:19+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,10 +20,10 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add on-access scan"
-msgstr ""
+msgstr "Aggiungi scansione all'accesso"
 
 msgid "Add scheduled job"
-msgstr ""
+msgstr "Aggiungi processo pianificato"
 
 msgid "Algorithmic detection"
 msgstr "Rilevamento algoritmico"
@@ -61,13 +61,13 @@ msgid "Detect broken executables"
 msgstr "Rileva eseguibili danneggiati"
 
 msgid "Done ..."
-msgstr ""
+msgstr "Fatto ..."
 
 msgid "Edit on-access scan"
-msgstr ""
+msgstr "Modifica scansione all'accesso"
 
 msgid "Edit scheduled job"
-msgstr ""
+msgstr "Modifica processo pianificato"
 
 msgid "Enable"
 msgstr "Abilita"
@@ -114,7 +114,7 @@ msgid "Every N minute"
 msgstr "Ogni N minuti"
 
 msgid "Execute scheduled job"
-msgstr ""
+msgstr "Esegui processo pianificato"
 
 msgid "Extra options"
 msgstr "Opzioni extra"
@@ -165,7 +165,7 @@ msgid "Number of database update checks per day. Set to 0 to disable."
 msgstr "Numero di controlli di aggiornamenti del database giornalieri. Impostare a 0 per disabilitarli."
 
 msgid "On Access Scans"
-msgstr ""
+msgstr "Scansioni all'accesso"
 
 msgid "On-access"
 msgstr "All'accesso"
@@ -222,7 +222,7 @@ msgid "Shared folder"
 msgstr "Cartella condivisa"
 
 msgid "The location of the files to scan on-access."
-msgstr ""
+msgstr "Il percorso dei file da controllare all'accesso."
 
 msgid "The location of the files to scan."
 msgstr "Il percorso dei file da controllare."
