--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-usbbackup (4.0.3-1) stable; urgency=low
 
+  * Update locales.
   * Remove configuration in database when package is purged.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Nov 2017 19:33:29 +0100
