--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.13) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Nov 2017 08:30:10 +0100
+
 openmediavault (4.0.12-1) stable; urgency=low
 
   * Update locales.
