--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (4.0.4-1) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Nov 2017 07:36:15 +0100
+
 openmediavault-forkeddaapd (4.0.3-1) stable; urgency=low
 
   * Remove configuration in database when package is purged.
