Fix bug in monit configuration script.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
-openmediavault (4.0.13) stable; urgency=low
+openmediavault (4.0.13-1) stable; urgency=low
 
   * Various improvements.
+  * Fix bug in monit configuration script.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Nov 2017 08:30:10 +0100
 
