--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (4.1.4-1) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 28 Nov 2017 17:36:53 +0100
+
 openmediavault-clamav (4.1.3-1) stable; urgency=low
 
   * Update locales.
