--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
@@ -15,8 +15,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-11-27 07:23+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,10 +25,10 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 msgid "Add on-access scan"
-msgstr ""
+msgstr "Добавить проверку доступа"
 
 msgid "Add scheduled job"
-msgstr ""
+msgstr "Добавить запланированное задание"
 
 msgid "Algorithmic detection"
 msgstr "Алгоритмическое обнаружение"
@@ -66,13 +66,13 @@ msgid "Detect broken executables"
 msgstr "Обнаружение повреждённых исполняемых файлов"
 
 msgid "Done ..."
-msgstr ""
+msgstr "Выполнено..."
 
 msgid "Edit on-access scan"
-msgstr ""
+msgstr "Редактировать проверку доступа"
 
 msgid "Edit scheduled job"
-msgstr ""
+msgstr "Изменить запланированное задание"
 
 msgid "Enable"
 msgstr "Включить"
@@ -119,7 +119,7 @@ msgid "Every N minute"
 msgstr "Каждую N минуту"
 
 msgid "Execute scheduled job"
-msgstr ""
+msgstr "Выполнение запланированного задания"
 
 msgid "Extra options"
 msgstr "Дополнительные опции"
@@ -170,7 +170,7 @@ msgid "Number of database update checks per day. Set to 0 to disable."
 msgstr "Количество проверок обновлений базы данных в день. Установите в 0 для отключения."
 
 msgid "On Access Scans"
-msgstr ""
+msgstr "Проверка доступа"
 
 msgid "On-access"
 msgstr "При обращении"
@@ -227,7 +227,7 @@ msgid "Shared folder"
 msgstr "Общая папка"
 
 msgid "The location of the files to scan on-access."
-msgstr ""
+msgstr "Расположение файлов для сканирования по доступу."
 
 msgid "The location of the files to scan."
 msgstr "Расположение файлов для сканирования."
