--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/zh_CN/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/zh_CN/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-11-26 16:05+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,10 +19,10 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Add on-access scan"
-msgstr ""
+msgstr "添加实时后台扫描"
 
 msgid "Add scheduled job"
-msgstr ""
+msgstr "添加计划任务"
 
 msgid "Algorithmic detection"
 msgstr "检测算法"
@@ -60,13 +60,13 @@ msgid "Detect broken executables"
 msgstr "检测损坏的可执行文件"
 
 msgid "Done ..."
-msgstr ""
+msgstr "完成中 ..."
 
 msgid "Edit on-access scan"
-msgstr ""
+msgstr "编辑实时后台扫描"
 
 msgid "Edit scheduled job"
-msgstr ""
+msgstr "编辑计划任务"
 
 msgid "Enable"
 msgstr "启用"
@@ -113,7 +113,7 @@ msgid "Every N minute"
 msgstr "每 N 分钟"
 
 msgid "Execute scheduled job"
-msgstr ""
+msgstr "执行计划任务"
 
 msgid "Extra options"
 msgstr "扩展选项"
@@ -164,7 +164,7 @@ msgid "Number of database update checks per day. Set to 0 to disable."
 msgstr "每天数据库更新检查次数，0 为不检查。"
 
 msgid "On Access Scans"
-msgstr ""
+msgstr "实时后台扫描"
 
 msgid "On-access"
 msgstr "存取时"
@@ -221,7 +221,7 @@ msgid "Shared folder"
 msgstr "共享文件夹"
 
 msgid "The location of the files to scan on-access."
-msgstr ""
+msgstr "实时后台扫描位置"
 
 msgid "The location of the files to scan."
 msgstr "要扫描病毒的位置。"
