--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (4.0.4-1) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 28 Nov 2017 17:38:15 +0100
+
 openmediavault-usbbackup (4.0.3-1) stable; urgency=low
 
   * Update locales.
