--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/ru_RU/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/ru_RU/openmediavault-usbbackup.po
@@ -5,13 +5,14 @@
 # Translators:
 # Alexander Savchenko, 2014
 # Артур Мудрых <arturmon82@gmail.com>, 2013,2015
+# Артур Мудрых <arturmon82@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-11-27 07:23+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +53,7 @@ msgid "Device"
 msgstr "Устройство"
 
 msgid "Done ..."
-msgstr ""
+msgstr "Выполнено..."
 
 msgid "Edit backup job"
 msgstr "Редактировать задание резервного копирования"
