--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/zh_CN/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/zh_CN/openmediavault-usbbackup.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the openmediavault-usbbackup package.
 # 
 # Translators:
-# songming <by@songming.me>, 2013-2014,2016
+# songming <by@songming.me>, 2013-2014,2016-2017
 # Wei Ding <dyw.net@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-11-26 16:06+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +52,7 @@ msgid "Device"
 msgstr "设备"
 
 msgid "Done ..."
-msgstr ""
+msgstr "完成中 ..."
 
 msgid "Edit backup job"
 msgstr "编辑备份任务"
