--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.14-1) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 28 Nov 2017 18:00:05 +0100
+
 openmediavault (4.0.13-1) stable; urgency=low
 
   * Various improvements.
