--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.94) stable; urgency=low
+
+  * Support predictable network device names in omv-initsystem.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 Dec 2017 15:32:35 +0100
+
 openmediavault (3.0.93) stable; urgency=low
 
   * Various improvements.
