--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -122,6 +122,12 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.94) stable; urgency=low
+
+  * Support predictable network device names in omv-initsystem.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 Dec 2017 15:32:35 +0100
+
 openmediavault (3.0.93) stable; urgency=low
 
   * Various improvements.
