Update changelog for 4.0.15.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.15-1) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Dec 2017 13:54:19 +0100
+
 openmediavault (4.0.14-1) stable; urgency=low
 
   * Various improvements.
